# setrem-iot-middleware

./: Dockerfile  README.md  app.py  client.py  compose.yaml  init.sh  pyproject.toml  requirements.txt
docker/: Dockerfile.rabbitmq
src/: coap.py  dht11.py  env.py
test/: client_get.py  client_put.py
